manifests/bigbang/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubevirt
  namespace: kubevirt
spec:
  gateways:
  - istio-system/public
  hosts:
  - kubevirt.bigbang.dev
  http:
  - route:
    - destination:
        host: istio-vmi-svc.istio-vmi.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ssh
  namespace: istio-system
spec:
  selector:
    app: public-ingressgateway
  servers:
  - hosts:
    - 'ssh.bigbang.dev'
    port:
      name: tcp-ssh
      number: 2222
      protocol: TCP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cockpit
  namespace: kubevirt
spec:
  gateways:
  - istio-system/public
  hosts:
  - cockpit.bigbang.dev
  http:
  - route:
    - destination:
        host: istio-vmi-svc.istio-vmi.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ssh
  namespace: kubevirt
spec:
  gateways:
  - istio-system/ssh
  hosts:
  - ssh.bigbang.dev
  tcp:
  - match:
    - port: 2222
    route:
    - destination:
        host: istio-vmi-svc.istio-vmi.svc.cluster.local
        port:
          number: 2222
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vnc
  namespace: kubevirt
spec:
  gateways:
  - istio-system/vnc
  hosts:
  - vnc.bigbang.dev
  tcp:
  - match:
    - port: 5904
    route:
    - destination:
        host: istio-vmi-svc.istio-vmi.svc.cluster.local
        port:
          number: 5904
